// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Main should render Main correctly with children and empty offers 1`] = `
<main
  className="page__main page__main--index page__main--index-empty"
>
  <h1
    className="visually-hidden"
  >
    Cities
  </h1>
  <div>
    Children
  </div>
</main>
`;

exports[`Main should render Main correctly with children and no empty offers 1`] = `
<main
  className="page__main page__main--index "
>
  <h1
    className="visually-hidden"
  >
    Cities
  </h1>
  <div>
    Children
  </div>
</main>
`;
